bugfixes and cleanup
fix horizontal scrollbar

--- a/sources/chargen.css
+++ b/sources/chargen.css
@@ -28,7 +28,6 @@ canvas {
 
 body {
   margin: 10px 15px;
-  min-width: 1280px;
   font-size: 10pt;
   font-family: monospace;
 }
@@ -139,7 +138,8 @@ input[type=button], input[type=reset] {
 #chooser {
   overflow-y: auto;
   min-width: 200px;
-  max-height: calc(100vh - 380px);
+  max-height: calc(100vh - 320px);
+  margin-top: 80px;
   margin-left: 15px;
   order: 2;
 }
@@ -161,6 +161,8 @@ input[type=button], input[type=reset] {
 }
 
 #credits, #advanced {
+  margin-top: 15px;
+  padding-top: 15px;
   margin-left: 15px;
 }
 
@@ -168,14 +170,14 @@ summary {
   display: none;
 }
 
-/* tablet view 800 - 1280 px */
+/* portrait mode 800 - 1280 px width, > 1200 px height */
 @media screen and (max-width: 1280px) {
   header {
     flex-direction: column;
   }
 
   #header-left {
-    width: calc(100% - 140px);
+    width: calc(100vw - 140px);
     min-height: 180px;
     overflow-y: auto;
   }
@@ -209,6 +211,8 @@ summary {
   #chooser {
     height: auto;
     max-height: none;
+    margin-top: -30px;
+    padding-top: 30px;
   }
 
   #controls {
@@ -220,24 +224,37 @@ summary {
     padding-bottom: 20px;
   }
 
+  #controls>details[open] {
+    margin-left: -10px;
+    margin-bottom: -40px;
+    padding-left: 10px;
+    padding-bottom: 40px;
+  }
+
   /* override #customizeChar > section */
   #customizeChar > #controls {
-    width: 100%;
+    width: calc(100vw - 80px);
   }
 
   #preview-animations {
     margin-left: 15px;
     position: relative;
-    top: 150px;
+    top: 130px;
     z-index: 2;
     opacity: 1;
     background-color: white;
     margin-top: -60px;
     padding-top: 40px;
-    width: 100%;
+    width: calc(100vw - 80px);
+  }
+
+  #credits {
+    margin-top: 0;
+    padding-top: 0;
   }
 }
 
+/* tablet view 800 - 1280 px, <= 1200 px height */
 @media screen and (max-width: 1280px) and (max-height: 1200px) {
   header {
     position: static;
@@ -255,7 +272,9 @@ summary {
   #preview-animations {
     position: absolute;
     z-index: 0;
-    top: 350px;
+    top: 340px;
+    margin-top: -40px;
+    padding-top: 40px;
   }
 
   #preview-animations.controls-open {
@@ -283,10 +302,6 @@ summary {
 
   #preview:has(+#controls>details:not([open])) {
     margin-top: 170px;
-  }
-
-  #chooser {
-    padding-top: 30px;
   }
 
   #preview:has(>details[open]) {
@@ -387,13 +402,7 @@ label[for="displayMode-compact"] {
 }
 
 #creditsText {
-  width: 100%;
-}
-
-#github {
-  position: fixed;
-  top: 0;
-  right: 0;
+  width: calc(100vw - 80px);
 }
 
 a {
